--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  logger: ^0.6.0
   http: ^0.12.0
   intl: ^0.16.1
   auto_size_text: ^2.1.0
