--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   http: ^0.12.0
   intl: ^0.16.1
+  equatable: ^1.0.0
+  flutter_bloc: ^4.0.0
   auto_size_text: ^2.1.0
   liquid_pull_to_refresh: ^2.0.0
   simple_animations: ^2.1.1
