--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   http: ^0.12.0
   intl: ^0.16.1
-  equatable: ^1.0.0
+  equatable: ^1.1.1
   flutter_bloc: ^4.0.0
   auto_size_text: ^2.1.0
   liquid_pull_to_refresh: ^2.0.0
@@ -31,6 +31,7 @@ dependencies:
   animations: ^1.0.0+5
   flutter_staggered_animations: ^0.1.2
   logger: ^0.6.0
+  fl_chart: ^0.10.0
   flutter:
     sdk: flutter
 
